--- a/css/about.css
+++ b/css/about.css
@@ -83,14 +83,26 @@ a>img:hover {
 }
 
 #greetingPic>img {
-    width: 30vw;
-    height: 30vw;
+    width: 30rem;
+    height: 30rem;
+    max-width: 40vmin;
+    max-height: 40vmin;
     position: static;
     opacity: 0.25;
     border-radius: 50%;
-    margin-top: -12rem;
-    margin-left: -1rem;
-    margin-bottom: -10rem;
+    margin: -20rem 0 -12rem 5vw;
+}
+
+@media (min-width: 1200px) {
+    #greetingPic>img {
+        margin-left: 20vw;
+    }
+}
+
+@media (min-width: 1400px) {
+    #greetingPic>img {
+        margin-left: 25vw;
+    }
 }
 
 #myIntro {
@@ -156,35 +168,6 @@ a>img:hover {
     width: 10rem;
 }
 
-.animationFlipIn {
-    padding: 1rem;
-    animation: animationFlipIn 1s ease-in-out;
-    border-radius: .125rem;
-    color: black;
-    margin: 1rem;
-    font-family: Menlo Regular;
-    background: repeating-linear-gradient(45deg, gray, gray 10px, darkkhaki 10px, darkkhaki 20px);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
-
-@keyframes animationFlipIn {
-    0% {
-        opacity: 0;
-    }
-
-    20% {
-        opacity: 0;
-    }
-
-    25% {
-        transform: scale(1);
-    }
-
-    100% {
-        transform: scale(1, -1) scale(1, -1);
-    }
-}
-
 /* typeWriter below */
 #typeWriter {
     margin: 0 auto;
@@ -201,6 +184,7 @@ a>img:hover {
     width: 100vw;
     max-width: 100vw;
     overflow-x: hidden;
+    margin-bottom: -3rem;
 }
 
 @media (max-width: 635px) {
@@ -265,7 +249,11 @@ a>img:hover {
 #typeWriter2:before,
 #typeWriter2:after,
 #typeWriter3:before,
-#typeWriter3:after {
+#typeWriter3:after,
+#typeWriter4:before,
+#typeWriter4:after,
+#typeWriter5:before,
+#typeWriter5:after {
     content: "";
     position: absolute;
     top: 0;
@@ -276,14 +264,14 @@ a>img:hover {
 #typeWriter1::before {
     width: 100vw;
     background: rgb(50, 50, 50);
-    animation: write 1s steps(25) 0.5s forwards;
+    animation: write 1s steps(15) 0.5s forwards;
 }
 
 #typeWriter1::after {
     opacity: 1;
     width: 0.15em;
     background: rgb(50, 50, 50);
-    animation: write 1s steps(22) 0.5s forwards, blink 0.75s reverse steps(22) 2.25;
+    animation: write 1s steps(15) 0.5s forwards, blink 0.75s reverse steps(15) 2.25;
 }
 
 @keyframes write {
@@ -321,7 +309,7 @@ a>img:hover {
 #typeWriter2::before {
     width: 100vw;
     background: rgb(50, 50, 50);
-    animation: write 1.5s steps(35) 0.5s forwards;
+    animation: write 0.5s steps(9) 0.5s forwards;
     animation-delay: 2s;
 }
 
@@ -329,21 +317,51 @@ a>img:hover {
     opacity: 1;
     width: 0.15em;
     background: rgb(50, 50, 50);
-    animation: write 1.5s steps(28) 0.5s forwards, blink 0.75s reverse steps(28) 3;
+    animation: write 0.5s steps(9) 0.5s forwards, blink 0.75s reverse steps(9) 1.25;
     animation-delay: 2s;
 }
 
 #typeWriter3::before {
     width: 100vw;
     background: rgb(50, 50, 50);
-    animation: write 1.5s steps(24) 0.5s forwards;
-    animation-delay: 4s;
+    animation: write 1s steps(16) 0.5s forwards;
+    animation-delay: 3s;
 }
 
 #typeWriter3::after {
     opacity: 1;
     width: 0.15em;
     background: rgb(50, 50, 50);
-    animation: write 1.5s steps(24) 0.5s forwards, blink 0.75s reverse steps(24) infinite;
-    animation-delay: 4s;
+    animation: write 1s steps(16) 0.5s forwards, blink 0.75s reverse steps(16) 2;
+    animation-delay: 3s;
+}
+
+#typeWriter4::before {
+    width: 100vw;
+    background: rgb(50, 50, 50);
+    animation: write 1s steps(16) 0.5s forwards;
+    animation-delay: 4.5s;
+}
+
+#typeWriter4::after {
+    opacity: 1;
+    width: 0.15em;
+    background: rgb(50, 50, 50);
+    animation: write 1s steps(16) 0.5s forwards, blink 0.75s reverse steps(16) 2;
+    animation-delay: 4.5s;
+}
+
+#typeWriter5::before {
+    width: 100vw;
+    background: rgb(50, 50, 50);
+    animation: write 0.25s steps(1) 0.5s forwards;
+    animation-delay: 5.75s;
+}
+
+#typeWriter5::after {
+    opacity: 1;
+    width: 0.15em;
+    background: rgb(50, 50, 50);
+    animation: write 0.25s steps(1) 0.5s forwards, blink 0.75s reverse steps(1) infinite;
+    animation-delay: 5.75s;
 }
