--- a/css/about.css
+++ b/css/about.css
@@ -43,7 +43,7 @@ h4,
 h6,
 .container-fluid>div>div>h3,
 .h3 {
-    color: #00857c;
+    color: cornflowerblue;
     font-family: Menlo Regular;
 }
 
