--- a/css/contact.css
+++ b/css/contact.css
@@ -77,14 +77,14 @@ a>img:hover {
 }
 
 #greetingPic>img {
-    width: 30rem;
-    height: 20rem;
-    /* max-width: 60vmin;
-    max-height: 40vmin; */
+    width: 50vw;
+    height: 30vw;
+    max-width: 30rem;
+    max-height: 20rem;
     position: static;
     opacity: 0.25;
     border-radius: 50%;
-    margin: -20rem 0 0 -5vw;
+    margin: -15rem 0 0 -5vw;
 }
 
 @media (max-width: 580px) {
