--- a/css/welcome.css
+++ b/css/welcome.css
@@ -9,7 +9,7 @@ html {
 
 body {
     background-color: transparent;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     flex-direction: column;
 }
@@ -41,27 +41,46 @@ body {
     margin-top: 10rem;
     padding: 3rem 0;
     opacity: 1;
-    animation: welcomeSectionsFadeIn 1s ease-in-out;
-    background-color: rgb(50,50,50);
+    animation: animationFadeIn 5s ease-in-out;
+    background-color: rgb(50, 50, 50);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-@keyframes welcomeSectionsFadeIn {
-    0% {
-        opacity: 0;
-    }
+/* Tech Stack */
+.myArticles {
+    color: white;
+    border-radius: 0.25rem;
+    background-color: transparent;
+}
 
-    59% {
-        opacity: 0;
-    }
+.row {
+    max-width: 1200px;
+    margin: 2rem auto;
+    gap: 2vw;
+}
 
-    60% {
-        opacity: 1;
+.card {
+    margin: 0 auto;
+}
 
-    }
+.img-fluid {
+    height: 8rem;
+    width: 8rem;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
 
-    81% {
-        opacity: 1;
-    }
+.img-round {
+    border-radius: 50%;
+}
 
-    100% {}
+.img-square {
+    background-color: transparent;
+    height: 8rem;
+    width: auto;
+    box-shadow: none;
+}
+
+footer {
+    background-color: rgb(50, 50, 50);
 }
