--- a/css/welcome.css
+++ b/css/welcome.css
@@ -1,5 +1,5 @@
 html {
-    background-size: 100%;
+    background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-image: url("../pics/pharm2code_tilt.jpg");
@@ -9,7 +9,6 @@ html {
 
 body {
     background-color: transparent;
-    /* height: 100vh; */
     display: flex;
     flex-direction: column;
 }
@@ -28,6 +27,15 @@ body {
 @media (max-height:360px) {
     #welcome {
         margin-top: 1rem;
+    }
+}
+
+@media (max-width: 400px) {
+    html {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position-y: 12%;
     }
 }
 
