--- a/css/welcome.css
+++ b/css/welcome.css
@@ -2,7 +2,7 @@ html {
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    background-image: url("../pics/pharm2code_tilt.jpg");
+    background-image: url("../pics/vesselCode_tilt_full.jpg");
     text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
@@ -27,15 +27,6 @@ body {
 @media (max-height:360px) {
     #welcome {
         margin-top: 1rem;
-    }
-}
-
-@media (max-width: 400px) {
-    html {
-        background-size: 200%;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-position-y: top;
     }
 }
 
