--- a/css/welcome.css
+++ b/css/welcome.css
@@ -1,8 +1,8 @@
 html {
-    background-size: contain;
+    /* background-size: contain;
     background-attachment: fixed;
     background-position: center;
-    background-image: linear-gradient(rgba(40,40,40, 0.7), rgba(40, 40, 40, 0.7)),url("../pics/vesselCode_tilt_full.jpg");
+    background-image: linear-gradient(rgba(40,40,40, 0.7), rgba(40, 40, 40, 0.7)),url("../pics/vesselCode_tilt_full.jpg"); */
     text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
@@ -11,6 +11,10 @@ body {
     background-color: transparent;
     display: flex;
     flex-direction: column;
+    background-size: contain;
+    background-attachment: fixed;
+    background-position: center;
+    background-image: linear-gradient(rgba(40,40,40, 0.7), rgba(40, 40, 40, 0.7)),url("../pics/vesselCode_tilt_full.jpg");
 }
 
 #welcome {
