--- a/css/welcomeAnimations.css
+++ b/css/welcomeAnimations.css
@@ -11,12 +11,12 @@
 
     30% {
         margin-top: 10;
-        transform: scaleY(90%);
+        /* transform: scaleY(90%); */
     }
 
     65% {
-        margin-top: 20vh;
-        transform: scaleY(80%);
+        /* margin-top: 20vh; */
+        /* transform: scaleY(80%); */
     }
 
     85% {
