--- a/css/welcome.css
+++ b/css/welcome.css
@@ -11,8 +11,9 @@ body {
     background-color: transparent;
     display: flex;
     flex-direction: column;
-    background-size: cover;
-    /* background-size: contain; */
+    /* background-size: cover; */
+    background-size: contain;
+    background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: top;
     background-image: linear-gradient(rgba(50,50,50, 0.7), rgba(50, 50, 50, 0.7)),url("../pics/vesselCode_tilt_full.jpg");
