--- a/css/welcome.css
+++ b/css/welcome.css
@@ -11,7 +11,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: 50% 3rem;
-    background-image: url("../pics/vesselCode_tilt_part.jpg");
+    /* background-image: url("../pics/vesselCode_tilt_part.jpg"); */
 }
 
 @media (max-width:400px) {
