--- a/css/navbar.css
+++ b/css/navbar.css
@@ -56,7 +56,7 @@
     animation-iteration-count: infinite;
     transition: 0.5s ease-in-out;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    border-radius: 25% 50% 25% 50%;
+    border-radius: 50% 4px 50% 4px;
 }
 
 .navbar-toggler>img:hover {
