--- a/css/navbar.css
+++ b/css/navbar.css
@@ -55,8 +55,9 @@
     animation: logoWiggle 5s ease-in-out;
     animation-iteration-count: infinite;
     transition: 0.5s ease-in-out;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    border-radius: 50% 4px 50% 4px;
+    width: 2.5rem;
+    -webkit-filter: drop-shadow(2px 2px 2px black);
+    filter: drop-shadow(2px 2px 2px black);
 }
 
 .navbar-toggler>img:hover {
