--- a/css/global.css
+++ b/css/global.css
@@ -100,6 +100,8 @@ footer>p>span {
 
 footer>p>img {
   animation: slowSpin 5s ease-in-out infinite;
+  -webkit-filter: drop-shadow(1px 1px 1px black);
+  filter: drop-shadow(1px 1px 1px black);
 }
 
 @keyframes slowSpin {
@@ -119,6 +121,8 @@ footer>p>img {
 .socialLogo {
   max-height: 1.5rem;
   transition: transform 0.5s ease-in-out;
+  -webkit-filter: drop-shadow(1px 1px 1px black);
+  filter: drop-shadow(1px 1px 1px black);
 }
 
 .socialLogo:hover {
