--- a/css/welcome.css
+++ b/css/welcome.css
@@ -119,13 +119,18 @@ body {
     filter: drop-shadow(1px 1px 1px black);
 }
 
-#welcomeCard1,
+#welcomeCard1 {
+    transition: all 0.5s ease-in-out;
+    transform: translate(-2rem) scale(0.9);
+}
+
 #welcomeCard2 {
     transition: all 0.5s ease-in-out;
+    transform: translate(2rem) scale(0.9);
 }
 
 .shift {
-    transform: scale(1.05);
+    transform: scale(1.1) !important;
 }
 
 footer {
