--- a/css/welcome.css
+++ b/css/welcome.css
@@ -119,16 +119,21 @@ body {
     filter: drop-shadow(1px 1px 1px black);
 }
 
-#welcomeCard1 {
-    transition: all 0.5s ease-in-out;
-    transform: translate(-1.5rem) scale(0.9);
+
+.card {
+    transition: all 1s ease-in-out;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+#welcomeCard1 {
+    /* transition: all 1s ease-in-out; */
+    transform: translate(-1.5rem) scale(0.9);
+    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px; */
 }
 
 #welcomeCard2 {
-    transition: all 0.5s ease-in-out;
+    /* transition: all 1s ease-in-out; */
     transform: translate(1.5rem) scale(0.9);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px; */
 }
 
 .shift {
