--- a/css/global.css
+++ b/css/global.css
@@ -69,13 +69,18 @@ a:focus {
 
 #githubContributions {
     width: 100%;
+    opacity: 0;
+    transition: all 0.25s ease-in-out
 }
 
 #githubContributions>a>img {
     margin: 1rem 0;
     width: 90vw;
     max-width: 960px;
-    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
+}
+
+.show {
+    opacity: 1 !important;
 }
 
 #githubContributions>a:hover,
