--- a/css/global.css
+++ b/css/global.css
@@ -88,11 +88,32 @@ a:focus {
     opacity: 1;
 }
 
+#carousel {
+    z-index: 1;
+    margin: 4rem 0 1rem 0;
+    width: 100vw;
+    background-color: rgb(50,50,50);
+}
+
 .carousel-inner {
     max-width: 50rem;
     margin: 0 auto;
     text-align: center;
     background-color: rgb(50,50,50);
+}
+
+@media (max-width:575px) {
+    .carousel-inner{
+        max-width: 30rem;
+    }
+}
+
+@media (max-width:400px) {
+    .carousel-inner{
+        margin-left: -2.5rem;
+        padding: 0;
+        width: 27rem;
+    }
 }
 
 footer {
