--- a/css/contact.css
+++ b/css/contact.css
@@ -164,7 +164,7 @@ a>img:hover {
 .form-item>input {
     background-color: transparent;
     color: white;
-    text-shadow: 1px 1px black;
+    /* text-shadow: 1px 1px black; */
     border-radius: 0.25rem;
     border: .125rem solid black;
     margin-bottom: 0.5rem;
