--- a/css/global.css
+++ b/css/global.css
@@ -70,7 +70,8 @@ a:focus {
 #githubContributions {
     width: 100%;
     opacity: 0;
-    transition: all 0.25s ease-in-out
+    transition: all 0.25s ease-in-out;
+    transform: scale(0.5);
 }
 
 #githubContributions>a>img {
@@ -81,6 +82,7 @@ a:focus {
 
 .show {
     opacity: 1 !important;
+    transform: scale(1) !important;
 }
 
 #githubContributions>a:hover,
