--- a/css/global.css
+++ b/css/global.css
@@ -83,6 +83,7 @@ a:focus {
 .show {
     opacity: 1 !important;
     transform: scale(1) !important;
+    z-index: 1;
 }
 
 #githubContributions>a:hover,
