--- a/css/global.css
+++ b/css/global.css
@@ -95,6 +95,7 @@ a:focus {
     z-index: 1;
     margin: 4rem 0 1rem 0;
     width: 100vw;
+    height: 8rem;
     background-color: rgb(50,50,50);
 }
 
