--- a/css/welcome.css
+++ b/css/welcome.css
@@ -151,13 +151,18 @@ body {
     transform: scale(0);
 }
 
-footer {
-    background-color: rgb(50, 50, 50);
+#footer {
+    /* background-color: rgb(50, 50, 50); */
+    height: 0;
+    background-color: black;
 }
 
 @media (max-width:575px) {
-    footer {
+    #footer {
         margin-top: 2rem;
-        padding-top: 1rem;
+        height: 3rem;
+    }
+    #carousel {
+        margin-bottom: 0;
     }
 }
