--- a/css/welcome.css
+++ b/css/welcome.css
@@ -149,18 +149,23 @@ body {
 #carousel {
     margin: -3rem;
     transform: scale(0);
+    background-color: rgb(50, 50, 50);
 }
 
 #footer {
-    /* background-color: rgb(50, 50, 50); */
     height: 0;
+    margin-top: -3rem;
     background-color: black;
 }
 
 @media (max-width:575px) {
     #footer {
-        margin-top: 2rem;
-        height: 3rem;
+        margin-top: 2rem !important;
+        height: 2.5rem;
+    }
+    .carousel-inner{
+        max-width: 40rem;
+        height: 9rem;
     }
     #carousel {
         margin-bottom: 0;
