--- a/css/resume.css
+++ b/css/resume.css
@@ -26,7 +26,7 @@ a>.img-fluid:hover {
     opacity: 0.5;
 }
 
-.img-fluid {
+.imgWhiteBg {
     height: 8rem;
     width: 8rem;
     background-color: white;
@@ -61,9 +61,20 @@ a>.img-fluid:hover {
     text-shadow: 1px 1px black;
 }
 
+#yodaJim {
+    opacity: 0 !important;
+    transition: all 0.25s ease-in-out;
+    transform: translateY(100px);
+    border-radius: 25%;
+}
+#yodaJim.show{
+    opacity: 1 !important;
+    transform: translateY(0);
+}
+
 /* Article CSS Below */
 .myArticles {
-    margin: 1rem auto;
+    margin: 3rem auto;
     padding: 1rem;
     border: 1px solid black;
     border-radius: 0.25rem;
@@ -76,7 +87,7 @@ a>.img-fluid:hover {
 
 @media (max-width:960px) {
     .myArticles {
-        margin: 1rem 5vw;
+        margin: 3rem 5vw;
     }
 }
 
